# AudioRoom

./: .gitignore  Certificate.h  README.md  SignalServer.cpp  WSCert.cpp  cmake_install.cmake
Backend/: CMakeCache.txt  CMakeLists.txt  Certificate.cpp  EventEmitter.cpp  Makefile  main.cpp
Backend/CallServer/: CallServer.cpp  CallServer.h
Backend/WebRTC/: Ice.cc  Ice.h  PeerConnection.cc  RtpHandler.cc  __RtpHandler.cc  debug.h
CallServer/: Session.h
Frontend/React/call/: package-lock.json  package.json
Frontend/React/call/src/: .App.js.swo  .App.js.swp  App.js  XApp.js
Frontend/React/call/src/Material/: AnimatedContainer.js  BoxExpandAnimation.js  MaterialInput.js
Frontend/React/call/src/Material/css/: styles.css
Frontend/React/call/src/Modules/: ControlPanel.js  UserList.js  VideoContainer.js  controlpanel.css  userlist.css
Frontend/React/call/src/styles/: room.css
WebRTC/: PeerConnection.h  RTPPacket.cc  RTPPacket.h  RtpHandler.h  Sdp.cc  Sdp.h  __RtpHandler.h  stun.h
